1. fix the record 2. Stop threads on kill 3. Fix the feedback reader